dfir_rs/tests/compile-fail-stable/surface_badgeneric_both.rs
../compile-fail/surface_badgeneric_both.rs